improve tmux panels

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -73,11 +73,11 @@
 
 #: }}}
 
-font_family         Source Code Pro
-bold_font           Source Code Pro SemiBold
-italic_font         Source Code Pro Italic
-bold_italic_font    Source Code Pro SemiBold Italic
-font_size           18.0
+font_family         Source Code Pro Medium
+bold_font           Source Code Pro Bold
+italic_font         Source Code Pro Medium Italic
+bold_italic_font    Source Code Pro Bold Italic
+font_size           17.4
 adjust_line_height  9
 
 modify_font underline_position 2 
