remove codeium from unecessary filetypes

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -73,12 +73,12 @@
 
 #: }}}
 
-font_family         Source Code Pro Medium
-bold_font           Source Code Pro Bold
-italic_font         Source Code Pro Medium Italic
-bold_italic_font    Source Code Pro Bold Italic
-font_size           17.4
-adjust_line_height  9
+font_family         JetBrains Mono NL Medium
+bold_font           JetBrains Mono NL Bold
+italic_font         JetBrains Mono NL Medium Italic
+bold_italic_font    JetBrains Mono NL Bold Italic
+font_size           15.0
+adjust_line_height  6
 
 modify_font underline_position 2 
 disable_ligatures cursor
@@ -559,9 +559,9 @@ cursor_blink_interval 0.5
 
 #: }}}
 
-include ./themes/tokyonight_moon.conf
+include ./themes/one-dark.conf
 dynamic_background_opacity yes
-background_opacity 0.80
+background_opacity 0.90
 background_blur 32
 
 #: Advanced {{{
