--- a/.config/nvim/utils/.prettierrc
+++ b/.config/nvim/utils/.prettierrc
@@ -1,6 +1,7 @@
 {
   "printWidth": 110,
   "singleQuote": false,
+  "bracketSpacing": false,
   "bracketSameLine": true,
   "proseWrap": "always"
 }
