--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -73,11 +73,18 @@
 
 #: }}}
 
-font_family         JetBrains Mono NL Medium
+font_family         JetBrains Mono NL
 bold_font           JetBrains Mono NL Bold
-italic_font         JetBrains Mono NL Medium Italic
+italic_font         JetBrains Mono NL Italic
 bold_italic_font    JetBrains Mono NL Bold Italic
 font_size           15.0
+adjust_line_height  8
+
+font_family         Fira Code Fixed
+bold_font           auto
+italic_font         auto
+bold_italic_font    auto
+font_size           14.0
 adjust_line_height  6
 
 modify_font underline_position 2 
