--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -2,7 +2,10 @@
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'o0th/tmux-nova'
 # set -g @plugin 'gustavomtborges/tmux-themes'
+
+tmux_dir="~/.config/tmux"
 
 # upgrade $TERM
 set-option -g default-terminal "tmux-256color"
@@ -40,19 +43,23 @@ bind '"' split-window -v -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 
 # Bind navigate to vim
-bind -r k select-pane -U\; refresh-client -S
-bind -r j select-pane -D\; refresh-client -S
-bind -r l select-pane -R\; refresh-client -S
-bind -r h select-pane -L\; refresh-client -S
+bind k select-pane -U\; refresh-client -S
+bind j select-pane -D\; refresh-client -S
+bind l select-pane -R\; refresh-client -S
+bind h select-pane -L\; refresh-client -S
 
 # Rebind last window
 bind o last-window
 
-set -g status-interval 2
-set -g status-right "#[fg=black,bg=default]#(tmux-mem-cpu-load --interval 2) #[default] #(whoami)@#H "
+# set -g status-interval 2
+# set -g status-right "#[fg=black,bg=default]#(tmux-mem-cpu-load --interval 2) #[default]"
+
 set -g status-right-length 100
-set -g status-left-length 50
+set -g status-left-length 100
+
 # set -g @onedark_widgets
+
+source "$tmux_dir/theme.conf"
 
 # Rebind resurrect
 set -g @resurrect-save 'S'
