change terminal from kitty to ghostty

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -73,10 +73,10 @@
 
 #: }}}
 
-font_family         JetBrains Mono NL
-bold_font           JetBrains Mono NL Bold
-italic_font         JetBrains Mono NL Italic
-bold_italic_font    JetBrains Mono NL Bold Italic
+font_family         Source Code Pro Medium
+bold_font           Source Code Pro Bold
+italic_font         Source Code Pro Medium Italic
+bold_italic_font    Source Code Pro Bold Italic
 font_size           15.0
 adjust_line_height  8
 
@@ -1080,7 +1080,7 @@ macos_option_as_alt left
 
 # }}}
 # Disable shortcuts
-clear_all_shortcuts no
+clear_all_shortcuts yes
 
 map kitty_mod+q no_op
 map kitty_mod+e no_op
