--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -72,6 +72,10 @@ set-option -g focus-events on
 # setw -g xterm-keys on
 set -s extended-keys on
 
+# terminal title
+set-option -g set-titles on
+set-option -g set-titles-string "#{pane_current_path}"
+
 # bind -n C-Tab send-keys "\x1b[9;5u"
 # bind -n C-S-Tab send-keys "\x1b[9;6u"
 
