--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,27 +1,7 @@
 # vim:ft=config
-# font-family = Source Code Pro
-# font-style = Medium
-# font-style-italic = Medium Italic
-# font-size = 16
-# adjust-cell-height = 6
-
-# font-family = JetBrains Mono NL
-# font-style = Medium
-# font-style-italic = Medium Italic
-# font-size = 15
-# adjust-cell-height = 4
-
-# font-family = Maple Mono NL
-# font-style = Medium
-# font-style-italic = Medium Italic
-# font-size = 16
-# adjust-cell-height = 4
-
-font-family = Code Saver
-font-style = Medium
-font-style-italic = Medium Italic
-font-size = 17
-adjust-cell-height = 4
+font-family = Comic Mono
+font-size = 15
+adjust-cell-height = 10
 
 # Ligatures test M ç á ã â ä à å æ ç é è ê ë í ì î ï ñ ó ò ô ö ø ú ù û ü ý ÿ
 # filter |> === := != => -> >= <= /\ </> /\ | #{} #() #[] $ 0 - -- --- -h --h ---h
@@ -31,12 +11,15 @@ adjust-cell-height = 4
 
 adjust-underline-position = 3
 
-theme = catppuccin-frappe
-palette = 8=#677289
+theme = OneHalfLight
+# palette = 8=#677289
+palette = 8=#99a1b2
+# cursor-color = #948B89
+
 background-opacity = 0.95
 background-blur-radius = 32
 
-window-width = 145
+window-width = 152
 window-height = 50
 
 cursor-style = block
