--- a/.config/tmux/theme.conf
+++ b/.config/tmux/theme.conf
@@ -10,22 +10,33 @@ set -g @nova-pane "#F #I  #W"
 set -g @nova-rows 0
 
 ### COLORS ###
-b_bg="#404653"
+# b_bg="#404653"
+b_bg="#F0F0F0"
 
-seg_a="#c678dd #282c34"
-seg_b="$b_bg #abb2bf"
+# seg_a="#c678dd #282c34"
+seg_a="#a626a4 #fafafa"
 
-inactive_bg="#323742"
-inactive_fg="#abb2bf"
+# seg_b="$b_bg #abb2bf"
+seg_b="$b_bg #5f697c"
+
+# inactive_bg="#323742"
+inactive_bg="#E5E5E6"
+
+# inactive_fg="#abb2bf"
+inactive_fg="#5f697c"
+
+# active_fg="#abb2bf"
+active_fg="#5f697c"
+
 active_bg=$b_bg
-active_fg="#abb2bf"
 
 set -gw window-status-current-style bold
 set -g "@nova-status-style-bg" "$inactive_bg"
 set -g "@nova-status-style-fg" "$inactive_fg"
 set -g "@nova-status-style-active-bg" "$active_bg"
 set -g "@nova-status-style-active-fg" "$active_fg"
-set -g "@nova-mode-style-bg" "#e5c07b"
+# set -g "@nova-mode-style-bg" "#e5c07b"
+set -g "@nova-mode-style-bg" "#d18e6b"
 set -g "@nova-mode-style-fg" "$active_bg"
 
 set -g "@nova-pane-active-border-style" "#98c379"
