--- a/.config/kmonad/local.kmonad-logi.plist
+++ b/.config/kmonad/local.kmonad-logi.plist
@@ -14,8 +14,8 @@
     <key>RunAtLoad</key>
     <true />
     <key>StandardOutPath</key>
-    <string>/tmp/kmonad-logi.stdout</string>
+    <string>/Users/gustavo/.config/kmonad/kmonad-logi.stdout</string>
     <key>StandardErrorPath</key>
-    <string>/tmp/kmonad-logi.stderr</string>
+    <string>/Users/gustavo/.config/kmonad/kmonad-logi.stderr</string>
   </dict>
 </plist>
