--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -25,10 +25,16 @@ set -g mouse on
 
 # Copy mode VIM
 set -gw mode-keys vi
-bind -T copy-mode    C-c send -X copy-pipe-no-clear "xsel -i --clipboard"
-bind -T copy-mode-vi C-c send -X copy-pipe-no-clear "xsel -i --clipboard"
-set -g @yank_action 'copy-pipe-no-clear'
 
+# Linux
+# bind -T copy-mode    C-c send -X copy-pipe-no-clear "xsel -i --clipboard"
+# bind -T copy-mode-vi C-c send -X copy-pipe-no-clear "xsel -i --clipboard"
+
+# macOS
+# bind -T copy-mode    C-c send -X copy-pipe-no-clear "pbcopy"
+# bind -T copy-mode-vi C-c send -X copy-pipe-no-clear "pbcopy"
+
+set -g @yank_action 'copy-pipe-no-clear'
 
 # Scroll history
 set-option -g history-limit 15000
