--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,7 +1,11 @@
 # vim:ft=config
-font-family = Comic Mono
-font-size = 15
-adjust-cell-height = 10
+font-family = Source Code Pro
+font-style = Medium
+font-style-italic = false
+font-style-bold-italic = false
+font-size = 14
+adjust-cell-height = 8
+adjust-cursor-height = 8
 
 # Ligatures test M ç á ã â ä à å æ ç é è ê ë í ì î ï ñ ó ò ô ö ø ú ù û ü ý ÿ
 # filter |> === := != => -> >= <= /\ </> /\ | #{} #() #[] $ 0 - -- --- -h --h ---h
@@ -28,3 +32,5 @@ shell-integration-features = no-cursor
 macos-option-as-alt = left
 keybind = alt+left=unbind
 keybind = alt+right=unbind
+keybind = super+s=text::w\r
+
