--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -559,7 +559,7 @@ cursor_blink_interval 0.5
 
 #: }}}
 
-include ./themes/one-dark.conf
+include ./themes/onehalf_light_custom.conf
 dynamic_background_opacity yes
 background_opacity 0.95
 background_blur 32
