--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -13,8 +13,12 @@ set-option -ga terminal-overrides ',*256col*:Tc'
 
 # Change send-prefix bind
 unbind C-b
-set-option -g prefix C-Space
+set-option -g prefix C-a
+bind-key C-a send-prefix
+
+set-option -g prefix2 C-Space
 bind-key C-Space send-prefix
+
 
 # Windows and panes start index 1
 set -g base-index 1
@@ -63,7 +67,7 @@ set -g status-left-length 100
 
 # set -g @onedark_widgets
 
-source "$tmux_dir/theme.conf"
+source "$tmux_dir/theme-onedark-light.conf"
 
 # Rebind resurrect
 set -g @resurrect-save 'S'
