--- a/fonts/iosevka-custom/private-build-plans.toml
+++ b/fonts/iosevka-custom/private-build-plans.toml
@@ -6,7 +6,7 @@ noCvSs = false
 exportGlyphNames = true
 
 [buildPlans.IosevkaCustom.variants.design]
-one = "no-base"
+one = "base"
 two = "curly-neck-serifless"
 three = "two-arcs"
 four = "semi-open-serifless"
@@ -27,27 +27,27 @@ capital-k = "curly-serifless"
 capital-m = "hanging-serifless"
 capital-p = "closed-serifless"
 capital-q = "closed-swash"
-capital-r = "curly-top-left-serifed"
+capital-r = "curly-serifless"
 capital-s = "serifless"
 capital-t = "serifless"
 capital-v = "straight-serifless"
 capital-w = "straight-serifless"
 capital-y = "straight-serifless"
-a = "double-storey-toothless-corner"
+a = "double-storey-serifless"
 b = "toothless-corner-serifless"
 c = "serifless"
 d = "toothed-serifless"
 e = "rounded"
 g = "double-storey-open"
 h = "straight-serifless"
-i = "serifed-flat-tailed"
+i = "serifed"
 k = "curly-serifless"
-l = "serifed-flat-tailed"
+l = "tailed-serifed"
 n = "straight-serifless"
 p = "eared-serifless"
 r = "serifless"
 s = "serifless"
-t = "flat-hook-short-neck2"
+t = "bent-hook-short-neck2"
 v = "straight-serifless"
 w = "straight-serifless"
 y = "straight-turn-serifless"
