--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -67,7 +67,7 @@ set -g status-left-length 100
 
 # set -g @onedark_widgets
 
-source "$tmux_dir/theme-tokyonight.conf"
+source "$tmux_dir/one-dark.conf"
 
 # Rebind resurrect
 set -g @resurrect-save 'S'
