--- a/fonts/iosevka-custom/private-build-plans.toml
+++ b/fonts/iosevka-custom/private-build-plans.toml
@@ -2,11 +2,11 @@
 family = "Iosevka Custom"
 spacing = "fixed"
 serifs = "sans"
-noCvSs = false
-exportGlyphNames = true
+noCvSs = true
+exportGlyphNames = false
 
 [buildPlans.IosevkaCustom.variants.design]
-one = "base"
+one = "no-base"
 two = "curly-neck-serifless"
 three = "two-arcs"
 four = "semi-open-serifless"
@@ -20,13 +20,13 @@ capital-a = "straight-serifless"
 capital-b = "standard-serifless"
 capital-c = "serifless"
 capital-d = "more-rounded-serifless"
-capital-g = "toothless-corner-serifless-hooked"
+capital-g = "toothed-serifless-hooked"
 capital-i = "serifed"
 capital-j = "serifed"
 capital-k = "curly-serifless"
 capital-m = "hanging-serifless"
 capital-p = "closed-serifless"
-capital-q = "closed-swash"
+capital-q = "curly-tailed"
 capital-r = "curly-serifless"
 capital-s = "serifless"
 capital-t = "serifless"
@@ -34,22 +34,27 @@ capital-v = "straight-serifless"
 capital-w = "straight-serifless"
 capital-y = "straight-serifless"
 a = "double-storey-serifless"
-b = "toothless-corner-serifless"
+b = "toothed-serifless"
 c = "serifless"
 d = "toothed-serifless"
 e = "rounded"
+f = "serifless"
 g = "double-storey-open"
 h = "straight-serifless"
 i = "serifed"
+j = "serifed"
 k = "curly-serifless"
 l = "tailed-serifed"
 n = "straight-serifless"
 p = "eared-serifless"
+q = "straight-serifless"
 r = "serifless"
 s = "serifless"
-t = "bent-hook-short-neck2"
+t = "bent-hook-asymmetric-short-neck2"
+u = "toothed-serifless"
 v = "straight-serifless"
-w = "straight-serifless"
+w = "straight-flat-top-serifless"
+x = "straight-serifless"
 y = "straight-turn-serifless"
 z = "straight-serifless"
 capital-eszet = "rounded-serifless"
@@ -63,7 +68,7 @@ diacritic-dot = "round"
 punctuation-dot = "round"
 braille-dot = "round"
 tilde = "low"
-asterisk = "penta-high"
+asterisk = "penta-low"
 underscore = "high"
 caret = "medium"
 ascii-grave = "straight"
@@ -72,13 +77,13 @@ paren = "large-contour"
 brace = "curly"
 guillemet = "straight"
 number-sign = "slanted"
-ampersand = "et-tailed"
-at = "threefold"
+ampersand = "upper-open"
+at = "compact"
 dollar = "open"
 cent = "bar-interrupted"
 percent = "rings-segmented-slash"
 bar = "natural-slope"
-question = "corner"
+question = "smooth"
 pilcrow = "curved"
 micro-sign = "tailed-serifless"
 decorative-angle-brackets = "middle"
