--- a/.config/tmux/one-dark.conf
+++ b/.config/tmux/one-dark.conf
@@ -10,27 +10,29 @@ set -g @nova-pane "#F #I  #W"
 set -g @nova-rows 0
 
 ### COLORS ###
-# Tokyo Night Storm colors
-b_bg="#24283b"             # Background
-seg_a="#bb9af7 #1a1b26"    # Purple on darker background
-seg_b="$b_bg #a9b1d6"      # Foreground text on background
-inactive_bg="#1f2335"      # Inactive background
-inactive_fg="#737aa2"      # Inactive foreground
-active_fg="#c0caf5"        # Active foreground
-active_bg=$b_bg            # Active background
+# Atom One Dark colors
+b_bg="#282c34"
+seg_a="#c678dd #282c34"
+seg_b="$b_bg #abb2bf"
+inactive_bg=$b_bg
+inactive_fg="#abb2bf"
+active_fg="#abb2bf"
+active_bg=#3e4452
 
 set -gw window-status-current-style bold
 set -g "@nova-status-style-bg" "$inactive_bg"
 set -g "@nova-status-style-fg" "$inactive_fg"
 set -g "@nova-status-style-active-bg" "$active_bg"
-set -g "@nova-mode-style-bg" "#ff9e64"  # Orange
-set -g "@nova-mode-style-fg" "$active_bg"
-set -g "@nova-pane-active-border-style" "#7aa2f7"  # Blue
-set -g "@nova-pane-border-style" "#414868"         # Border color
+set -g "@nova-status-style-active-fg" "$active_fg"
+set -g "@nova-mode-style-bg" "#e5c07b"
+set -g "@nova-mode-style-fg" "#282c34"
+
+set -g "@nova-pane-active-border-style" "#98c379"
+set -g "@nova-pane-border-style" "#3e4452"
 
 ### STATUS BAR ###
 set -g @nova-segment-mode "#{?client_prefix,P,N}"
-set -g @nova-segment-mode-colors "#9ece6a #1a1b26"  # Green on darker background
+set -g @nova-segment-mode-colors "#98c379 #282c34"
 
 set -g @nova-segment-session "#{session_name}"
 set -g @nova-segment-session-colors "$seg_a"
@@ -40,3 +42,4 @@ set -g @nova-segment-mem-cpu-colors "$seg_b"
 
 set -g @nova-segments-0-left "session"
 set -g @nova-segments-0-right "mem-cpu"
+
