--- a/fonts/iosevka-custom/private-build-plans.toml
+++ b/fonts/iosevka-custom/private-build-plans.toml
@@ -44,7 +44,7 @@ h = "straight-serifless"
 i = "serifed"
 j = "serifed"
 k = "curly-serifless"
-l = "serifed-flat-tailed"
+l = "serifed-semi-tailed"
 n = "straight-serifless"
 p = "eared-serifless"
 q = "straight-serifless"
