--- a/.config/tmux/tokyonight.conf
+++ b/.config/tmux/tokyonight.conf
@@ -12,7 +12,7 @@ set -g @nova-rows 0
 ### COLORS ###
 # Tokyo Night Storm colors
 b_bg="#282d42"             # Background
-seg_a="#bb9af7 #1a1b26"    # Purple on darker background
+seg_a="#9d7cd8 #1a1b26"    # Purple on darker background
 seg_b="$b_bg #a9b1d6"      # Foreground text on background
 inactive_bg="#1f2335"      # Inactive background
 inactive_fg="#737aa2"      # Inactive foreground
