--- a/fonts/iosevka-custom/private-build-plans.toml
+++ b/fonts/iosevka-custom/private-build-plans.toml
@@ -6,16 +6,16 @@ noCvSs = true
 exportGlyphNames = false
 
 [buildPlans.IosevkaCustom.variants.design]
-one = "no-base"
+one = "base"
 two = "curly-neck-serifless"
 three = "two-arcs"
 four = "semi-open-serifless"
 five = "oblique-flat-serifless"
 six = "straight-bar"
 seven = "bend-serifless"
-eight = "crossing-asymmetric"
+eight = "two-circles"
 nine = "open-contour"
-zero = "oval-tall-slashed"
+zero = "slashed-split"
 capital-a = "straight-serifless"
 capital-b = "standard-serifless"
 capital-c = "serifless"
@@ -33,30 +33,31 @@ capital-t = "serifless"
 capital-v = "straight-serifless"
 capital-w = "straight-serifless"
 capital-y = "straight-serifless"
+capital-z = "curly-serifless"
 a = "double-storey-serifless"
-b = "toothed-serifless"
+b = "toothed-motion-serifed"
 c = "serifless"
-d = "toothed-serifless"
-e = "flat-crossbar"
-f = "flat-hook-serifless"
+d = "toothed-bottom-serifed"
+e = "rounded"
+f = "serifless"
 g = "double-storey-open"
-h = "straight-serifless"
+h = "straight-top-left-serifed"
 i = "serifed"
 j = "serifed"
 k = "curly-serifless"
-l = "serifed-semi-tailed"
+l = "tailed-serifed"
 n = "straight-serifless"
-p = "eared-serifless"
-q = "straight-serifless"
-r = "serifless"
+p = "eared-motion-serifed"
+q = "straight-motion-serifed"
+r = "top-serifed"
 s = "serifless"
-t = "flat-hook-short-neck2"
-u = "toothed-serifless"
+t = "bent-hook-asymmetric-short-neck2"
+u = "toothed-bottom-right-serifed"
 v = "straight-serifless"
 w = "straight-flat-top-serifless"
 x = "straight-serifless"
-y = "straight-turn-serifless"
-z = "straight-serifless"
+y = "straight-turn-motion-serifed"
+z = "curly-serifless"
 capital-eszet = "rounded-serifless"
 long-s = "bent-hook-diagonal-tailed"
 cyrl-en = "serifless"
@@ -110,7 +111,7 @@ menu = 700
 css = 700
 
 [buildPlans.IosevkaCustom.widths.Normal]
-shape = 560
+shape = 600
 menu = 5
 css = "normal"
 
