--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,7 +1,7 @@
 # vim:ft=config
 font-family = Iosevka Custom
 font-style = Medium
-font-size = 16
+font-size = 15
 adjust-cell-height = 8
 adjust-cursor-height = 8
 
@@ -14,7 +14,7 @@ font-codepoint-map = U+E0A0 = MesloLGL Nerd Font
 
 adjust-underline-position = 3
 
-theme = OneHalfDark
+theme = tokyonight-storm
 palette = 8=#677289
 # palette = 8=#99a1b2
 
