--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,10 +1,9 @@
 # vim:ft=config
-font-family = Source Code Pro
-font-style = Regular
-font-style-bold = SemiBold
-font-size = 15
-adjust-cell-height = 8
-adjust-cursor-height = 8
+font-family = Iosevka Custom
+font-style = Medium
+font-size = 16
+adjust-cell-height = 6
+adjust-cursor-height = 6
 
 # Ligatures test M ç á ã â ä à å æ ç é è ê ë í ì î ï ñ ó ò ô ö ø ú ù û ü ý ÿ
 # filter |> === := != => -> >= <= /\ </> /\ | #{} #() #[] $ 0 - -- --- -h --h ---h
