--- a/fonts/iosevka-custom/private-build-plans.toml
+++ b/fonts/iosevka-custom/private-build-plans.toml
@@ -35,28 +35,28 @@ capital-w = "straight-serifless"
 capital-y = "straight-serifless"
 capital-z = "curly-serifless"
 a = "double-storey-serifless"
-b = "toothed-motion-serifed"
+b = "toothed-serifless"
 c = "serifless"
-d = "toothed-bottom-serifed"
-e = "rounded"
-f = "serifless"
+d = "toothed-serifless"
+e = "flat-crossbar"
+f = "flat-hook-serifless-crossbar-at-x-height"
 g = "double-storey-open"
-h = "straight-top-left-serifed"
+h = "straight-serifless"
 i = "serifed"
 j = "serifed"
 k = "curly-serifless"
-l = "tailed-serifed"
+l = "serifed-semi-tailed"
 n = "straight-serifless"
-p = "eared-motion-serifed"
-q = "straight-motion-serifed"
-r = "top-serifed"
+p = "eared-serifless"
+q = "straight-serifless"
+r = "serifless"
 s = "serifless"
 t = "bent-hook-asymmetric-short-neck2"
-u = "toothed-bottom-right-serifed"
+u = "toothed-serifless"
 v = "straight-serifless"
 w = "straight-flat-top-serifless"
 x = "straight-serifless"
-y = "straight-turn-motion-serifed"
+y = "straight-turn-serifless"
 z = "curly-serifless"
 capital-eszet = "rounded-serifless"
 long-s = "bent-hook-diagonal-tailed"
@@ -79,7 +79,7 @@ brace = "curly"
 guillemet = "straight"
 number-sign = "slanted"
 ampersand = "upper-open"
-at = "threefold"
+at = "compact"
 dollar = "open"
 cent = "bar-interrupted"
 percent = "rings-segmented-slash"
@@ -100,18 +100,18 @@ shape = 400
 menu = 400
 css = 400
 
-[buildPlans.IosevkaCustom.weights.Medium]
-shape = 500
-menu = 500
-css = 500
-
 [buildPlans.IosevkaCustom.weights.Bold]
 shape = 700
 menu = 700
 css = 700
 
+[buildPlans.IosevkaCustom.weights.Medium]
+shape = 500
+menu = 500
+css = 500
+
 [buildPlans.IosevkaCustom.widths.Normal]
-shape = 600
+shape = 564
 menu = 5
 css = "normal"
 
