--- a/fonts/iosevka-custom/private-build-plans.toml
+++ b/fonts/iosevka-custom/private-build-plans.toml
@@ -20,7 +20,7 @@ capital-a = "straight-serifless"
 capital-b = "standard-serifless"
 capital-c = "serifless"
 capital-d = "more-rounded-serifless"
-capital-g = "toothed-serifless-hooked"
+capital-g = "toothless-corner-serifless-hooked"
 capital-i = "serifed"
 capital-j = "serifed"
 capital-k = "curly-serifless"
@@ -34,24 +34,24 @@ capital-v = "straight-serifless"
 capital-w = "straight-serifless"
 capital-y = "straight-serifless"
 capital-z = "curly-serifless"
-a = "double-storey-serifless"
+a = "double-storey-serifed"
 b = "toothed-serifless"
 c = "serifless"
 d = "toothed-serifless"
 e = "flat-crossbar"
-f = "flat-hook-serifless-crossbar-at-x-height"
+f = "flat-hook-serifless"
 g = "double-storey-open"
 h = "straight-serifless"
 i = "serifed"
-j = "serifed"
+j = "flat-hook-serifed"
 k = "curly-serifless"
-l = "serifed-semi-tailed"
+l = "serifed-flat-tailed"
 n = "straight-serifless"
 p = "eared-serifless"
 q = "straight-serifless"
 r = "serifless"
 s = "serifless"
-t = "bent-hook-asymmetric-short-neck2"
+t = "flat-hook-short-neck2"
 u = "toothed-serifless"
 v = "straight-serifless"
 w = "straight-flat-top-serifless"
@@ -78,7 +78,7 @@ paren = "large-contour"
 brace = "curly"
 guillemet = "straight"
 number-sign = "slanted"
-ampersand = "upper-open"
+ampersand = "closed"
 at = "compact"
 dollar = "open"
 cent = "bar-interrupted"
@@ -111,7 +111,7 @@ menu = 500
 css = 500
 
 [buildPlans.IosevkaCustom.widths.Normal]
-shape = 564
+shape = 570
 menu = 5
 css = "normal"
 
@@ -128,7 +128,7 @@ menu = "italic"
 css = "italic"
 
 [buildPlans.IosevkaCustom.metricOverride]
-cap = 725
+cap = 700
 ascender = 725
 xHeight = 510
 sb = 'default_sb * 0.88'
