--- a/fonts/iosevka-custom/private-build-plans.toml
+++ b/fonts/iosevka-custom/private-build-plans.toml
@@ -35,29 +35,29 @@ capital-w = "straight-serifless"
 capital-y = "straight-serifless"
 capital-z = "curly-serifless"
 a = "double-storey-serifed"
-b = "toothed-serifless"
+b = "toothed-motion-serifed"
 c = "serifless"
-d = "toothed-serifless"
+d = "tailed-serifless"
 e = "flat-crossbar"
-f = "flat-hook-serifless"
+f = "serifless-crossbar-at-x-height"
 g = "double-storey-open"
-h = "straight-serifless"
+h = "straight-top-left-serifed"
 i = "serifed"
-j = "flat-hook-serifed"
+j = "serifed"
 k = "curly-serifless"
-l = "serifed-flat-tailed"
+l = "serifed-semi-tailed"
 n = "straight-serifless"
-p = "eared-serifless"
-q = "straight-serifless"
+p = "eared-motion-serifed"
+q = "straight-motion-serifed"
 r = "serifless"
 s = "serifless"
-t = "flat-hook-short-neck2"
-u = "toothed-serifless"
+t = "bent-hook-asymmetric-short-neck"
+u = "tailed-serifless"
 v = "straight-serifless"
-w = "straight-flat-top-serifless"
+w = "straight-serifless"
 x = "straight-serifless"
-y = "straight-turn-serifless"
-z = "curly-serifless"
+y = "cursive-motion-serifed"
+z = "straight-serifless"
 capital-eszet = "rounded-serifless"
 long-s = "bent-hook-diagonal-tailed"
 cyrl-en = "serifless"
