--- a/fonts/iosevka-custom/private-build-plans.toml
+++ b/fonts/iosevka-custom/private-build-plans.toml
@@ -38,17 +38,17 @@ a = "single-storey-tailed"
 b = "toothed-motion-serifed"
 c = "serifless"
 d = "toothed-serifless"
-e = "rounded"
+e = "flat-crossbar"
 f = "flat-hook-serifless"
 g = "double-storey-open"
 h = "straight-top-left-serifed"
 i = "serifed"
-j = "serifed"
+j = "flat-hook-serifed"
 k = "curly-serifless"
-l = "serifed-flat-tailed"
+l = "serifed-semi-tailed"
 n = "straight-serifless"
 p = "eared-motion-serifed"
-q = "straight-motion-serifed"
+q = "straight-serifless"
 r = "serifless"
 s = "serifless"
 t = "flat-hook-short-neck2"
