--- a/fonts/iosevka-custom/private-build-plans.toml
+++ b/fonts/iosevka-custom/private-build-plans.toml
@@ -20,33 +20,36 @@ capital-a = "straight-serifless"
 capital-b = "standard-serifless"
 capital-c = "serifless"
 capital-d = "more-rounded-serifless"
-capital-g = "toothless-corner-serifless-hooked"
+capital-e = "serifless"
+capital-f = "top-left-serifed"
+capital-g = "toothed-serifless-capped"
 capital-i = "serifed"
 capital-j = "serifed"
 capital-k = "curly-serifless"
 capital-m = "hanging-serifless"
-capital-p = "closed-serifless"
-capital-q = "curly-tailed"
+capital-p = "closed-motion-serifed"
+capital-q = "crossing"
 capital-r = "curly-serifless"
 capital-s = "serifless"
 capital-t = "serifless"
 capital-v = "straight-serifless"
-capital-w = "straight-serifless"
+capital-w = "straight-almost-flat-top-serifless"
 capital-y = "straight-serifless"
-capital-z = "curly-serifless"
+capital-z = "straight-serifless"
 a = "single-storey-tailed"
 b = "toothed-motion-serifed"
 c = "serifless"
-d = "toothed-serifless"
-e = "flat-crossbar"
+d = "tailed-serifless"
+e = "rounded"
 f = "flat-hook-serifless"
 g = "double-storey-open"
 h = "straight-top-left-serifed"
-i = "serifed"
+i = "serifed-flat-tailed"
 j = "flat-hook-serifed"
 k = "curly-serifless"
 l = "serifed-semi-tailed"
-n = "straight-serifless"
+m = "top-left-serifed"
+n = "straight-top-left-serifed"
 p = "eared-motion-serifed"
 q = "straight-serifless"
 r = "serifless"
@@ -54,7 +57,99 @@ s = "serifless"
 t = "flat-hook-short-neck2"
 u = "tailed-serifless"
 v = "straight-serifless"
-w = "straight-serifless"
+w = "straight-almost-flat-top-serifless"
+x = "straight-serifless"
+y = "cursive-motion-serifed"
+z = "straight-serifless"
+capital-eszet = "rounded-serifless"
+long-s = "bent-hook-diagonal-tailed"
+cyrl-en = "serifless"
+cyrl-er = "eared-serifless"
+cyrl-capital-u = "cursive-serifless"
+cyrl-e = "serifless"
+tittle = "round"
+diacritic-dot = "round"
+punctuation-dot = "round"
+braille-dot = "round"
+tilde = "low"
+asterisk = "penta-low"
+underscore = "high"
+caret = "medium"
+ascii-grave = "straight"
+ascii-single-quote = "straight"
+paren = "large-contour"
+brace = "curly"
+guillemet = "straight"
+number-sign = "slanted"
+ampersand = "closed"
+at = "compact"
+dollar = "open"
+cent = "bar-interrupted"
+percent = "rings-segmented-slash"
+bar = "natural-slope"
+question = "smooth"
+pilcrow = "curved"
+micro-sign = "tailed-serifless"
+decorative-angle-brackets = "middle"
+lig-ltgteq = "flat"
+lig-neq = "more-slanted-dotted"
+lig-equal-chain = "with-notch"
+lig-plus-chain = "without-notch"
+lig-double-arrow-bar = "with-notch"
+lig-single-arrow-bar = "without-notch"
+
+[buildPlans.IosevkaCustom.variants.italic]
+one = "no-base-long-top-serif"
+two = "curly-neck-serifless"
+three = "two-arcs"
+four = "semi-open-serifless"
+five = "oblique-flat-serifless"
+six = "straight-bar"
+seven = "bend-serifless"
+eight = "two-circles"
+nine = "open-contour"
+zero = "slashed-split"
+capital-a = "straight-serifless"
+capital-b = "standard-serifless"
+capital-c = "serifless"
+capital-d = "more-rounded-serifless"
+capital-f = "top-left-serifed"
+capital-g = "toothed-serifless-capped"
+capital-i = "serifed"
+capital-j = "serifed"
+capital-k = "curly-serifless"
+capital-m = "hanging-serifless"
+capital-p = "closed-motion-serifed"
+capital-q = "crossing"
+capital-r = "curly-serifless"
+capital-s = "serifless"
+capital-t = "serifless"
+capital-v = "straight-serifless"
+capital-w = "straight-almost-flat-top-serifless"
+capital-y = "straight-serifless"
+capital-z = "straight-serifless"
+a = "single-storey-tailed"
+b = "toothed-motion-serifed"
+c = "serifless"
+d = "tailed-serifless"
+e = "rounded"
+f = "flat-hook-serifless"
+g = "double-storey-open"
+h = "straight-top-left-serifed"
+i = "serifed-flat-tailed"
+j = "flat-hook-serifed"
+k = "curly-serifless"
+l = "serifed-semi-tailed"
+m = "top-left-serifed"
+n = "straight-top-left-serifed"
+p = "eared-motion-serifed"
+q = "straight-serifless"
+r = "serifless"
+s = "serifless"
+t = "flat-hook-short-neck2"
+u = "tailed-serifless"
+v = "straight-serifless"
+w = "straight-almost-flat-top-serifless"
 x = "straight-serifless"
 y = "cursive-motion-serifed"
 z = "straight-serifless"
@@ -125,6 +220,12 @@ angle = 0
 shape = "upright"
 menu = "upright"
 css = "normal"
+
+[buildPlans.IosevkaCustom.slopes.Italic]
+angle = 9.4
+shape = "italic"
+menu = "italic"
+css = "italic"
 
 [buildPlans.IosevkaCustom.metricOverride]
 cap = 700
