--- a/fonts/iosevka-custom/private-build-plans.toml
+++ b/fonts/iosevka-custom/private-build-plans.toml
@@ -21,36 +21,41 @@ capital-b = "standard-serifless"
 capital-c = "serifless"
 capital-d = "more-rounded-serifless"
 capital-e = "serifless"
-capital-f = "top-left-serifed"
-capital-g = "toothed-serifless-capped"
+capital-f = "serifless"
+capital-g = "toothless-corner-serifless-hooked"
+capital-h = "serifless"
 capital-i = "serifed"
 capital-j = "serifed"
 capital-k = "curly-serifless"
+capital-l = "serifless"
 capital-m = "hanging-serifless"
-capital-p = "closed-motion-serifed"
+capital-n = "standard-serifless"
+capital-p = "closed-serifless"
 capital-q = "crossing"
 capital-r = "curly-serifless"
 capital-s = "serifless"
 capital-t = "serifless"
+capital-u = "toothless-rounded-serifless"
 capital-v = "straight-serifless"
 capital-w = "straight-almost-flat-top-serifless"
+capital-x = "straight-serifless"
 capital-y = "straight-serifless"
 capital-z = "straight-serifless"
 a = "single-storey-tailed"
-b = "toothed-motion-serifed"
+b = "toothed-serifless"
 c = "serifless"
-d = "tailed-serifless"
+d = "toothed-serifless"
 e = "rounded"
 f = "flat-hook-serifless"
 g = "double-storey-open"
-h = "straight-top-left-serifed"
+h = "straight-serifless"
 i = "serifed-flat-tailed"
-j = "flat-hook-serifed"
+j = "serifed"
 k = "curly-serifless"
 l = "serifed-semi-tailed"
-m = "top-left-serifed"
-n = "straight-top-left-serifed"
-p = "eared-motion-serifed"
+m = "serifless"
+n = "straight-serifless"
+p = "eared-serifless"
 q = "straight-serifless"
 r = "serifless"
 s = "serifless"
@@ -59,7 +64,7 @@ u = "tailed-serifless"
 v = "straight-serifless"
 w = "straight-almost-flat-top-serifless"
 x = "straight-serifless"
-y = "cursive-motion-serifed"
+y = "cursive-serifless"
 z = "straight-serifless"
 capital-eszet = "rounded-serifless"
 long-s = "bent-hook-diagonal-tailed"
@@ -113,36 +118,42 @@ capital-a = "straight-serifless"
 capital-b = "standard-serifless"
 capital-c = "serifless"
 capital-d = "more-rounded-serifless"
-capital-f = "top-left-serifed"
-capital-g = "toothed-serifless-capped"
+capital-e = "serifless"
+capital-f = "serifless"
+capital-g = "toothless-corner-serifless-hooked"
+capital-h = "serifless"
 capital-i = "serifed"
 capital-j = "serifed"
 capital-k = "curly-serifless"
+capital-l = "serifless"
 capital-m = "hanging-serifless"
-capital-p = "closed-motion-serifed"
+capital-n = "standard-serifless"
+capital-p = "closed-serifless"
 capital-q = "crossing"
 capital-r = "curly-serifless"
 capital-s = "serifless"
 capital-t = "serifless"
+capital-u = "toothless-rounded-serifless"
 capital-v = "straight-serifless"
 capital-w = "straight-almost-flat-top-serifless"
+capital-x = "straight-serifless"
 capital-y = "straight-serifless"
 capital-z = "straight-serifless"
 a = "single-storey-tailed"
-b = "toothed-motion-serifed"
+b = "toothed-serifless"
 c = "serifless"
-d = "tailed-serifless"
+d = "toothed-serifless"
 e = "rounded"
 f = "flat-hook-serifless"
 g = "double-storey-open"
-h = "straight-top-left-serifed"
+h = "straight-serifless"
 i = "serifed-flat-tailed"
-j = "flat-hook-serifed"
+j = "serifed"
 k = "curly-serifless"
 l = "serifed-semi-tailed"
-m = "top-left-serifed"
-n = "straight-top-left-serifed"
-p = "eared-motion-serifed"
+m = "serifless"
+n = "straight-serifless"
+p = "eared-serifless"
 q = "straight-serifless"
 r = "serifless"
 s = "serifless"
@@ -151,7 +162,7 @@ u = "tailed-serifless"
 v = "straight-serifless"
 w = "straight-almost-flat-top-serifless"
 x = "straight-serifless"
-y = "cursive-motion-serifed"
+y = "cursive-serifless"
 z = "straight-serifless"
 capital-eszet = "rounded-serifless"
 long-s = "bent-hook-diagonal-tailed"
@@ -211,7 +222,7 @@ menu = 600
 css = 600
 
 [buildPlans.IosevkaCustom.widths.Normal]
-shape = 560
+shape = 586
 menu = 5
 css = "normal"
 
